Add small README changes